--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,36 +11,43 @@
 	</head>
 
 	<body>
-		<center><h1>Kumari simrans</h1></center>
+		<center><h1>Kumari simran IAS</h1></center>
 		<hr>
 		<div id="topOfPage">
 			<center><img src="images/GOT.jpg" align="center"></img></center>
-			<p>Game of Thrones is an American fantasy drama television series created by David Benioff and D. B. Weiss. It is an adaptation of A Song of Ice and Fire, George R. R. Martin's series of fantasy novels, the first of which is 'A Game of Thrones'!!!</p>
+			<p>The Indian Administrative Service (IAS) is the administrative arm of the All India Services of Government of India.[3] Considered the premier civil service of India,[3][4] the IAS is one of the three arms of the All India Services along with the Indian Police Service and the Indian Forest Service. Members of these three services serve the Government of India as well as the individual states. IAS officers are also deployed to various government establishments such as constitutional bodies, staff & line agencies, auxiliary bodies, public sector units, regulatory bodies, statutory bodies and autonomous bodies.
 
-			<p><h3>General Plot:</h3> A story of greed, lust, thirst for power, ruthlessness, barbarity - GOT is a story of seven kingdoms vying and sparring over absolute power and control to the Iron Throne.</p>
-			<iframe align = "right" width="400" height="200" src="https://www.youtube.com/embed/522l0YE9hRQ" frameborder="0" allowfullscreen></iframe>
+As with other countries following the parliamentary system of government, the IAS is a part of the permanent bureaucracy of the nation[5]; and is an inseparable part of the executive of the Government of India. As such, the bureaucracy remains politically neutral and guarantees administrative continuity to the ruling party or coalition.[5]
+
+Upon confirmation of service, an IAS officer serves a probationary period as a sub-divisional magistrate. Completion of this probation is followed by an executive administrative role in a district as a district magistrate and collector which lasts several years. After this tenure, an officer may be promoted to head a whole state administrative division, as a divisional commissioner.
+
+On attaining the higher scales of the pay matrix, IAS officers may lead government departments or ministries. In these roles, IAS officers represent the country at the international level in bilateral and multilateral negotiations. If serving on a deputation, they may be employed in intergovernmental organisations such as the World Bank, the International Monetary Fund, the Asian Development Bank, the Asian Infrastructure Investment Bank, or the United Nations, or its agencies. IAS officers are also involved in the conduct of elections in India as mandated by the Election Commission of India.'!!!</p>
+
+			<p><h3>HISTORY:</h3> During the East India Company period, the civil services were classified into three – covenanted, uncovenanted and special civil services. The covenanted civil service, or the Honourable East India Company's Civil Service (HEICCS), as it was called, largely comprised civil servants occupying the senior posts in the government.[4][6][7] The uncovenanted civil service was introduced solely to facilitate the entry of Indians onto the lower rung of the administration.[6][7][8] The special service comprised specialised departments, such as the Indian Forest Service, the Imperial Police and the Indian Political Service, whose ranks were drawn from either the covenanted civil service or the Indian Army. The Imperial Police included many Indian Army officers among its members, although after 1893 an annual exam was used to select its officers.[8][7] In 1858 the HEICCS was replaced by the Indian Civil Service (ICS),[6][7] which became the highest civil service in India between 1858 and 1947. The last appointments to the ICS were made in 1942.[7][8]
+
+With the passing of the Government of India Act 1919 by the Parliament of the United Kingdom, the Indian civil services—under the general oversight of the Secretary of State for India—were split into two arms, the All India Services and the Central Services.[9] The Indian Civil Service was one of the ten All India Services.
+
+In 1946 at the Premier's Conference, the Central Cabinet decided to form the Indian Administrative Service, based on the Indian Civil Service;[10][11] and the Indian Police Service, based on the Imperial Police.[10]
+
+There is no alternative to this administrative system... The Union will go, you will not have a united India if you do not have good All-India Service which has the independence to speak out its mind, which has [the] sense of security that you will standby [sic] your work... If you do not adopt this course, then do not follow the present Constitution. Substitute something else... these people are the instrument. Remove them and I see nothing but a picture of chaos all over the country.
+
+— Vallabhbhai Patel in the Constituent Assembly of India discussing the role of All India Services.</p>
+			<iframe align = "right" width="400" height="200" src="https://www.youtube.com/watch?v=YKyXWG1A7LI" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<hr>
 		<p><h3>Warring kingdoms:</h3>
 			<ul>
-				<li>Kingdom of the North!</li>
-				<li>Kingdom of the Mountain and the Vale!</li>
-				<li>Kingdom of the Isles and Rivers</li>
-				<li>Kingdom of the Rock</li>
-				<li>Kingdom of the Stormlands</li>
-				<li>Kingdom of the Reach</li>
-				<li>Principality of Dorne</li>
+				
+				<li></li>
 			</ul>
 		</p>
 		<hr>
 		<center>
-			<ins><h3>Kingdoms with their Lords or rulers and their symbols</h3></ins>
+			<ins><h3></h3></ins>
 			<table border="1">
 				<thead>
 					<tr>
-						<th>Kingdom</th>
-						<th>Lords</th>
-						<th>Symbol</th>
+						
 					</tr>
 				</thead>
 				<tbody>
