--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,7 @@
 		<title>Kumari simran</title>
 
 		<meta charset="utf-8" />
-		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-type"  charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		  
 	</head>
@@ -51,45 +51,6 @@ There is no alternative to this administrative system... The Union will go, you 
 					</tr>
 				</thead>
 				<tbody>
-					<tr>
-						<td>The North</td>
-						<td>Stark of Winterfell</td>
-						<td align="center"><a href="http://gameofthrones.wikia.com/wiki/Winterfell"><img src="images/HouseStark.png" height="100" width="100"></a></td>
-					</tr>
-					<tr>
-						<td>Kingdom of the Isles and Rivers</td>
-						<td>Harren Hoare</td>
-						<td align="center"><a href="http://gameofthrones.wikia.com/wiki/Harren_Hoare"><img src="images/Harren_Hoare.png" height="100" width="100"></a></td>
-					</tr>
-					<tr>
-						<td>The Vale</td>
-						<td>Arryn of the Eyrie</td>
-						<td align="center"><a href="http://gameofthrones.wikia.com/wiki/House_Arryn"><img src="images/Arryn.png" height="100" width="100"></a></td>
-					</tr>
-					<tr>
-						<td>The Westernlands</td>
-						<td>Lannister of Casterly Rock</td>
-						<td align="center"><a href="http://gameofthrones.wikia.com/wiki/House_Lannister"><img src="images/Lannister.png" height="100" width="100"></a></td>
-					</tr>
-					<tr>
-						<td>The Stormlands</td>
-						<td>Baratheon of Storm's End</td>
-						<td align="center"><a href="http://gameofthrones.wikia.com/wiki/House_Baratheon"><img src="images/Baratheon.png" height="100" width="100"></a></td>
-					</tr>
-					<tr>
-						<td>The Riverlands</td>
-						<td>Tully of Riverrun</td>
-						<td align="center"><a href="http://gameofthrones.wikia.com/wiki/House_Gardener"><img src="images/Gardner.png" height="100" width="100"></a></td>
-					</tr>
-					<tr>
-						<td>Dorne</td>
-						<td>Martell of Sunspear</td>
-						<td align="center"><a href="http://gameofthrones.wikia.com/wiki/House_Martell"><img src="images/Martell.png" height="100" width="100"></a></td>
-					</tr>
-				</tbody>
-			</table>
-		</center>
-		<p>Dedicated to all <strong>Game of Thrones</strong><sup>&reg;</sup> fans</p>
-		<p><a href="#topOfPage">top</a></p>
+					
 	</body>
 </html>
