--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,7 +14,7 @@
 		<center><h1>Kumari simran IAS</h1></center>
 		<hr>
 		<div id="topOfPage">
-			<center><img src="images/GOT.jpg" align="center"></img></center>
+			<center><img src="" align="center"></img></center>
 			<p>The Indian Administrative Service (IAS) is the administrative arm of the All India Services of Government of India.[3] Considered the premier civil service of India,[3][4] the IAS is one of the three arms of the All India Services along with the Indian Police Service and the Indian Forest Service. Members of these three services serve the Government of India as well as the individual states. IAS officers are also deployed to various government establishments such as constitutional bodies, staff & line agencies, auxiliary bodies, public sector units, regulatory bodies, statutory bodies and autonomous bodies.
 
 As with other countries following the parliamentary system of government, the IAS is a part of the permanent bureaucracy of the nation[5]; and is an inseparable part of the executive of the Government of India. As such, the bureaucracy remains politically neutral and guarantees administrative continuity to the ruling party or coalition.[5]
@@ -32,7 +32,7 @@ In 1946 at the Premier's Conference, the Central Cabinet decided to form the Ind
 There is no alternative to this administrative system... The Union will go, you will not have a united India if you do not have good All-India Service which has the independence to speak out its mind, which has [the] sense of security that you will standby [sic] your work... If you do not adopt this course, then do not follow the present Constitution. Substitute something else... these people are the instrument. Remove them and I see nothing but a picture of chaos all over the country.
 
 — Vallabhbhai Patel in the Constituent Assembly of India discussing the role of All India Services.</p>
-			<iframe align = "right" width="400" height="200" src="https://www.youtube.com/watch?v=YKyXWG1A7LI" frameborder="0" allowfullscreen></iframe>
+			<iframe align = "right" width="400" height="200"" frameborder="0" allowfullscreen></iframe>
 		
 					
 	</body>
